Stop extraneous scrollbars from appearing in chat text area when zoomed in. Fixes #36

--- a/chat.less
+++ b/chat.less
@@ -238,6 +238,7 @@
     padding-left: 15px;
     padding-right: 15px;
     textarea {
+      overflow: hidden;
       margin-bottom: 0; margin-top: 5px;
       resize: none; height: 30px;
     }
